develop 🤖 fix overflow and notifications label

--- a/src/app/modules/courses/components/course-short-info/course-short-info.component.scss
+++ b/src/app/modules/courses/components/course-short-info/course-short-info.component.scss
@@ -32,7 +32,8 @@
 
 .content {
   overflow: auto;
-  max-height: 350px;
+  min-height: 5ex;
+  max-height: 300px;
   word-break: break-all;
   overflow-wrap: break-word;
 }
